# bayesian_iv

./: .gitignore  LICENSE  README.md  pyproject.toml
bayesian_iv/: bayesian_iv.py
notebook/: analysis_of_flu_data.ipynb  examples.ipynb
