[tool.poetry]
name = "bayesian-iv"
version = "0.1.0"
description = ""
authors = ["hajime_kuno <hajimekuno10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
notebook = "^7.0.6"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
